@@ -1,4 +1,4 @@
-.TH RMW 1 2017-10-14
+.TH RMW 1 2018-10-24
 .SH NAME
 rmw - remove files, safely
 .SH SYNOPSIS
@@ -25,9 +25,6 @@ Purging can be disabled by using '\fBpurge_after = 0\fR' in configuration file.
 Purge requires \fB\-f\fR (\fB\-\-force\fR) to run (in your \fBrmw\fR configuration file, add
 the line '\fBforce_not_required\fR' if you'd rather not use \fB\-\-force\fR when purging).
 .SH OPTIONS
-.TP
-\fB\-B \-\-bypass\fR
-Ignore directory protection settings.
 .TP
 \fB\-c \-\-config\fR \fIfilename\fR
 Use an alternate configuration file.
