@@ -1,6 +1,10 @@
 === rmw ChangeLog ===
 rmw ChangeLog
 
+2018-10-26
+
+* PROTECT feature removed
+
 2018-10-24
 
 * released rmw v0.4.05
